syntax = "proto3";
package definitions;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "httperr.proto";

option go_package = "pkg/data/model";

message Probe {
	int32                     SiteID       = 1;
	google.protobuf.Timestamp Recorded     = 2;
	google.protobuf.Duration  ResponseTime = 3;
	HttpErr                   Err          = 4;
	string                    Msg          = 5;
}
